# pond-cli

./: README.md  pyproject.toml
src/pond_cli/: __init__.py  cli.py  client.py
